<resources>
    <string name="app_name">KajurApps</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="username" translatable="false">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_nav" translatable="false">KajurApps</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Kajur Apps</string>
    <string name="nav_header_subtitle" translatable="false">Sistem Kajur</string>
    <string name="nav_header_desc" translatable="false">Seperti Kajur</string>
    <string name="action_settings">Settings</string>

    <string name="action_english" translatable="false">English</string>
    <string name="action_indonesia" translatable="false">Indonesia</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_scanner" translatable="false">Scanner</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>

    <string name="beranda">Menu</string>
    <string name="product">Product</string>
    <string name="sell">Sell</string>
    <string name="saldo">Balance</string>
    <string name="buyHistory">Buy History</string>
    <string name="sellHistory">Sell History</string>
    <string name="cart">Cart</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
</resources>
