<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_menu"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scanner" />
    </group>

    <item android:title="Advanced">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
