<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NavActivity"
    tools:showIn="@layout/app_bar_nav">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/beranda"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/beranda"/>

        <TextView
            android:id="@+id/produk"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/product"/>
        <TextView
            android:id="@+id/jual"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/sell"/>
        <TextView
            android:id="@+id/saldo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/saldo"/>
        <TextView
            android:id="@+id/buyHistory"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/buyHistory"/>
        <TextView
            android:id="@+id/sellHistory"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/sellHistory"/>
        <TextView
            android:id="@+id/cart"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/cart"/>
        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/setting"/>
        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/DarkLight"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/Light"
            android:textSize="30sp"
            android:text="@string/logout"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>